amended issue with navbar on mobile
added a !important on navbar-logo needed to not be present in mobile
mode.

--- a/css/custom.css
+++ b/css/custom.css
@@ -265,8 +265,13 @@ footer {
         margin-bottom: 0;
     }
 	.navbar-custom{
-		position: fixed;
-		top: 0;
+		
+	}
+	.navbar-toggle{
+		color: #fff;
+	}
+	.navbar-logo{
+		display: none!important;
 	}
 	.navbar-custom{
 		width: 100%;
